# DumpSTL

./: .gitignore  CMakeLists.txt  DumpSTL.h  README.md
example/: example.sln
example/example/: CMakeLists.txt  example.cpp  example.vcxproj  example.vcxproj.filters
include/DumpSTL/: DumpSTL.h
scripts/: blenderScrypt.py  clear_stl.bat  run_blender.bat
